src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Primary_Property_Type_2__c</fullName>
        <label>Primary Property Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Multifamily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Type__c</fullName>
        <description>Primary vertical property type.</description>
        <inlineHelpText>Choose the primary vertical property type.</inlineHelpText>
        <label>Primary Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Multifamily</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Stage_Duration__c</fullName>
        <label>Prior Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Stage__c</fullName>
        <label>Prior Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability(%)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>1%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Characterization__c</fullName>
        <label>Project Characterization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This is a new construction project; the building has not yet been constructed</fullName>
                </value>
                <value>
                    <fullName>This is a retrofit project for an existing building</fullName>
                </value>
                <value>
                    <fullName>This is a complete rehabilitation project for an existing, older building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Finish_Date__c</fullName>
        <label>Project Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <inlineHelpText>The name of your project (optional)</inlineHelpText>
        <label>Project Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Objective__c</fullName>
        <description>Type of work Clean Fund can finance.</description>
        <label>Project Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renovation</fullName>
                </value>
                <value>
                    <fullName>Tenant Improvement</fullName>
                </value>
                <value>
                    <fullName>Value Add Acquisition</fullName>
                </value>
                <value>
                    <fullName>Ground-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Scope_Description__c</fullName>
        <inlineHelpText>description of project</inlineHelpText>
        <label>Project Scope Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Scope_Detail__c</fullName>
        <label>Project Scope Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Scope_Detail</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <description>This is the decision point whether to collect solar only information.</description>
        <label>Project Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Retrofit</fullName>
                </value>
                <value>
                    <fullName>Gut Rehab</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Energy Efficient Upgrades</fullName>
                    <isActive>false</isActive>
                    <label>Energy Efficient Upgrades</label>
                </value>
                <value>
                    <fullName>Solar Only</fullName>
                    <isActive>false</isActive>
                    <label>Solar Only</label>
                </value>
                <value>
                    <fullName>Solar plus other Energy Efficiencies</fullName>
                    <isActive>false</isActive>
                    <label>Solar plus other Energy Efficiencies</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Size_In_Dollars__c</fullName>
        <label>Project Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Size_Range__c</fullName>
        <description>Approximate project financing size (in $M)</description>
        <label>Project Size Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; $1.5</fullName>
                </value>
                <value>
                    <fullName>$1.5 - $5</fullName>
                </value>
                <value>
                    <fullName>&gt; $5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Completed - Looking for PACE reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <inlineHelpText>This is the estimated project start date</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_City_2__c</fullName>
        <label>Property City 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <description>Property&apos;s city</description>
        <label>Property City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County_2__c</fullName>
        <label>Property County 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <description>Property county</description>
        <label>Property County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Geolocation__c</fullName>
        <inlineHelpText>This is the geolocation of the property</inlineHelpText>
        <label>Property Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Property_Market_Value_Est_c__c</fullName>
        <label>CF Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Owner_City__c</fullName>
        <label>Property Owner City</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Email__c</fullName>
        <label>Property Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Property_Owner_First__c</fullName>
        <inlineHelpText>The person or entity that owns the property.</inlineHelpText>
        <label>Property Owner First</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Geolocation__c</fullName>
        <label>Property Owner Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Last__c</fullName>
        <label>Property Owner Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Property Owner Main Contact)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Phone__c</fullName>
        <label>Property Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Property_Owner_State__c</fullName>
        <label>Property Owner State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner_Street__c</fullName>
        <label>Property Owner Street</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Zip__c</fullName>
        <label>Property Owner Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <inlineHelpText>The person or entity that owns the property.</inlineHelpText>
        <label>Property Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Purchase_Price__c</fullName>
        <label>Property Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Scope_Text__c</fullName>
        <inlineHelpText>This is a list of the mutli-select options the user selected on the quote page.</inlineHelpText>
        <label>Property Scope Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Size_2__c</fullName>
        <inlineHelpText>Square footage of property</inlineHelpText>
        <label>Property Size 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Size__c</fullName>
        <description>Square footage of property or number of hotel rooms</description>
        <label>Property Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_State_2__c</fullName>
        <label>Property State 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>Choose the property&apos;s state.</description>
        <label>Property State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Street_Address_2__c</fullName>
        <inlineHelpText>When a Lead has 2 property addresses, put the second here.</inlineHelpText>
        <label>Property Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Address__c</fullName>
        <description>Lead&apos;s property street address</description>
        <inlineHelpText>Enter Street, City, County</inlineHelpText>
        <label>Property Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Comment__c</fullName>
        <inlineHelpText>If Property Taxes are not current a brief explanation.</inlineHelpText>
        <label>Property Tax Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Taxes_Current__c</fullName>
        <label>Property Taxes Current?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Zip_2__c</fullName>
        <label>Property Zip 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospective_Sr_Amount_Est__c</fullName>
        <description>Amount of Sr lender cash desired</description>
        <label>Prospective Sr Amount (Est)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospective_Sr_Lender__c</fullName>
        <description>Prospective Sr Lenders</description>
        <label>Prospective Sr Lender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qual_Date__c</fullName>
        <label>Qual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quoted_Date__c</fullName>
        <label>Quoted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Dormancy__c</fullName>
        <label>Reason for Dormancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Delay (Entitlement/Permit)</fullName>
                </value>
                <value>
                    <fullName>Execution of Construction Contract</fullName>
                </value>
                <value>
                    <fullName>Tenant Lease Execution</fullName>
                </value>
                <value>
                    <fullName>Closing of Property Acquistion</fullName>
                </value>
                <value>
                    <fullName>Securing Other Project Capital</fullName>
                </value>
                <value>
                    <fullName>Waiting For Lender Consent</fullName>
                </value>
                <value>
                    <fullName>Identification of Contractor (Solar)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulatory_Government_Actions__c</fullName>
        <inlineHelpText>Has any governmental entity taken any regulatory actions for environmental conditions at the property?</inlineHelpText>
        <label>Regulatory Government Actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_Main_Contact__c</fullName>
        <label>Relationship to Main Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Property Owner Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renovation_Date__c</fullName>
        <inlineHelpText>The most recent date that the Property was substantially renovated.</inlineHelpText>
        <label>Renovation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Studies_or_Assessments_Comments__c</fullName>
        <description>Risk_Studies_or_Assessments_Comments__c</description>
        <label>Risk Studies or Assessments Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Studies_or_Assessments__c</fullName>
        <label>Risk Studies or Assessments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Duplicate_Rules__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>An indication whether to run duplication rules or not.</inlineHelpText>
        <label>Run Duplicate Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Mortgage__c</fullName>
        <label>Second Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Owner info</description>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segmentation_Affiliation__c</fullName>
        <inlineHelpText>The closest affiliation for this lead.</inlineHelpText>
        <label>Segmentation Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccountTypeNew__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Segment_Affiliation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitive_Industries_Comment__c</fullName>
        <inlineHelpText>HT</inlineHelpText>
        <label>Sensitive Industries Comment</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sensitive_Industries__c</fullName>
        <inlineHelpText>copy ht</inlineHelpText>
        <label>Sensitive Industries</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolarPACE_Calc_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SolarPACE Calc Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Component__c</fullName>
        <label>Solar Component</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_PV_System_Size_kW__c</fullName>
        <label>Solar PV System Size (kW)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_System_Ownership__c</fullName>
        <label>Solar System Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spread_at_Quote_bps__c</fullName>
        <label>Spread at Quote (bps)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <formula>TODAY() -  Last_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Pre-Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Dead/Lost</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                    <isActive>false</isActive>
                    <label>Quoted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_to_convert_Opp_To__c</fullName>
        <defaultValue>(&quot;Pre-Qualified Lead&quot;)</defaultValue>
        <inlineHelpText>This is the stage that the opportunity will be converted to.</inlineHelpText>
        <label>Stage to convert Opp To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Installation_Cost__c</fullName>
        <label>Storage Installation Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Study_Date__c</fullName>
        <label>Study Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Vertical_Property_Type__c</fullName>
        <description>Sub-vertical property type, dependent on primary-vertical type.</description>
        <inlineHelpText>Choose primary vertical property type first, then choose sub-vertical type</inlineHelpText>
        <label>Sub-Vertical Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Primary_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Government Leased</fullName>
                </value>
                <value>
                    <fullName>Big Box</fullName>
                </value>
                <value>
                    <fullName>Strip Mall</fullName>
                </value>
                <value>
                    <fullName>Regional Mall</fullName>
                </value>
                <value>
                    <fullName>Chain</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Resort</fullName>
                </value>
                <value>
                    <fullName>National Flag</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>House of Worship</fullName>
                </value>
                <value>
                    <fullName>Country Club</fullName>
                </value>
                <value>
                    <fullName>Parking Garage</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Senior Housing</fullName>
                </value>
                <value>
                    <fullName>Regional Hospital</fullName>
                </value>
                <value>
                    <fullName>Medical Office</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Charter Schools</fullName>
                </value>
                <value>
                    <fullName>Private K-12</fullName>
                </value>
                <value>
                    <fullName>Private Higher Ed</fullName>
                </value>
                <value>
                    <fullName>For Profit</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Multi-Tenant</fullName>
                </value>
                <value>
                    <fullName>Owner/User</fullName>
                </value>
                <value>
                    <fullName>Single Tenant</fullName>
                </value>
                <value>
                    <fullName>Single Building</fullName>
                </value>
                <value>
                    <fullName>Garden Style</fullName>
                </value>
                <value>
                    <fullName>Low Income / Affordable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Size_kW_DC__c</fullName>
        <inlineHelpText>The size of the solar project</inlineHelpText>
        <label>System Size (kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talked_to_Property_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this once you&apos;ve talked to the property owner/decision maker.</description>
        <label>Talked to Property Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Delinquencies__c</fullName>
        <label>Tax Delinquencies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Sheet_Sent_Date__c</fullName>
        <label>Term Sheet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Financing_Fee_Dollars__c</fullName>
        <label>Total Financing Fee ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Financing_Fee__c</fullName>
        <label>Total Financing Fee</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_PACE_financing_amount_Est__c</fullName>
        <label>Total PACE financing amount (Est.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Budget__c</fullName>
        <description>Total cost of project (PACE+other)</description>
        <label>Total Project Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Date_2__c</fullName>
        <label>Transfer Date 2</label>
        <type>Date</type>
    </fields>
</CustomObject>